--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "@babylonjs/loaders": "^7.33.0",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
+    "formidable": "^3.5.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.1",
     "next": "15.0.3",
     "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.16",
     "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "stream": "^0.0.3"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
