--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "nodemailer": "^6.9.16",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
-    "stream": "^0.0.3"
+    "stream": "^0.0.3",
+    "three": "^0.176.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
